# Новые фичи Dsl языка
# Новые фичи в классах
* getl.json.JSONDataset: добавлено свойство "dataNode", в которое можно указать путь к секции, в которой находятся значения полей датасета
* getl.json.JSONDriver: проведена оптимизация генерации кода парсинга записей файлов для улучшения скорости обработки данных
* getl.xml.XMLDataset: добавлено свойство "dataNode", в которое можно указать путь к секции, в которой находятся значения полей датасета
* getl.xml.XMLDriver: проведена оптимизация генерации кода парсинга записей файлов для улучшения скорости обработки данных
* getl.yaml.YAMLDataset: добавлено свойство "dataNode", в которое можно указать путь к секции, в которой находятся значения полей датасета
* getl.yaml.YAMLDriver: проведена оптимизация генерации кода парсинга записей файлов для улучшения скорости обработки данных

# Исправления ошибок Dsl языка

# Исправления ошибок классов Getl